# Iterative_refinement_DA

./: .gitignore  PROMPTS.md  PROMPTS_ONESHOT.md  PROMPTS_ONESHOT_1D.md  README.md  commit_second_version.sh  pyproject.toml  results_comparison_summary.md
configs/: default.yaml  edsr.yaml  edsr_1d.yaml  kraichnan.yaml  oneshot_sr.yaml  oneshot_sr_1d.yaml
scripts/: ablation_a1_2d.py  ablation_a1_cascade_depth.py  ablation_a2_2d.py  ablation_a2_propagation_signal.py  ablation_e1_ddim_steps.py  ablation_e2_eta.py  ablation_future.md  ablation_obs_frequency.py  diagnose_solver.py  evaluate.py  generate_data.py  generate_fno_forecasts.py  generate_kraichnan_data.py  plot_ablation_a1_a2.py  plot_ablation_a1_a2_2d.py  plot_ablation_e1.py  plot_ablation_e2.py  plot_ablation_obs_frequency.py  plot_comparison.py  plot_comparison_1d.py  plot_data_sanity.py  plot_enkf_comparison.py  plot_fno_shared_vs_separate.py  plot_fno_shared_vs_separate_e2e.py  plot_misc_2d.py  plot_misc_burgers.py  plot_multiscale_schematic.py  plot_oi_vs_ir.py  plot_results.py  plot_results_2d.py  plot_results_edsr.py  plot_results_edsr_1d.py  plot_results_oi.py  plot_results_oneshot.py  plot_spectrum_schematic.py  run_inference.py  run_inference_2d.py  run_inference_edsr.py  run_inference_edsr_1d.py  run_inference_enkf.py  (+10 more)
src/evaluation/: metrics.py  metrics_2d.py
src/inference/: pipeline.py  pipeline_2d.py  pipeline_oneshot.py  pipeline_oneshot_1d.py
src/models/: diffusion.py  edsr.py  edsr_1d.py  embeddings.py  fno.py  fno_2d.py  fno_2d_shared.py  unet.py  unet_2d.py  unet_oneshot.py  (+1 more)
(+9 files in other folders)
